--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://MainScene.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Globals.gd")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://assets/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -37,7 +37,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Camera2D.gd", "res://Globals.gd", "res://MainScene.gd", "res://TileMap.gd"]
-selected_script="res://MainScene.gd"
+selected_script="res://Globals.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
