--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -30,6 +30,14 @@ HSlider:scale=true
 Label:scale=true
 CheckButton:scale=true
 OptionButton:scale=true
+VBoxContainer:scale=true
+HBoxContainer:scale=true
+Container:scale=true
+Panel:scale=true
+ColorRect:scale=true
+RichTextLabel:scale=true
+GridContainer:scale=true
+CheckBox:scale=true
 
 [script_setup]
 
@@ -37,5 +45,13 @@ last_selected_language="GDScript"
 
 [dialog_bounds]
 
-create_new_node=Rect2(510, 190, 900, 700)
+create_new_node=Rect2(2598, 282, 900, 700)
 project_settings=Rect2(510, 190, 900, 700)
+
+[color_picker]
+
+recent_presets=PackedColorArray(0.187176, 0.187176, 0.187176, 1, 0, 0, 0, 0.545098, 0, 0, 0, 0.372549, 0, 0, 0, 0.25098, 0, 0, 0, 1, 1, 1, 1, 1, 0.28485, 0.28485, 0.28485, 1, 0.286275, 0.286275, 0.286275, 1, 0.226707, 0.226708, 0.226707, 1)
+
+[scripts_panel]
+
+show_scripts_panel=true
