--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 46,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 125,
-"scroll_position": 0.0,
+"row": 145,
+"scroll_position": 119.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 171,
-"scroll_position": 135.0,
-"selection": false,
+"row": 28,
+"scroll_position": 105.0,
+"selection": true,
+"selection_from_column": 8,
+"selection_from_line": 28,
+"selection_to_column": 20,
+"selection_to_line": 28,
 "syntax_highlighter": "GDScript"
 }
 
