--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,10 +29,10 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://Maze.tscn", "res://MainScene.tscn")
 current_scene="res://Maze.tscn"
-center_split_offset=0
+center_split_offset=-473
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
@@ -47,3 +47,13 @@ list_split_offset=0
 open_shaders=[]
 split_offset=0
 selected_shader=""
+
+[editor_log]
+
+log_filter_0=true
+log_filter_2=true
+log_filter_1=true
+log_filter_3=true
+log_filter_4=true
+collapse=true
+show_search=true
