--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,7 +27,7 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Maze.tscn", "res://MainScene.tscn")
+open_scenes=PackedStringArray("res://Maze.tscn", "res://MainScene.tscn", "res://LabelPreset.tscn")
 current_scene="res://Maze.tscn"
 center_split_offset=-283
 selected_default_debugger_tab_idx=0
