Export compiled project

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -46,7 +46,8 @@ last_selected_language="GDScript"
 [dialog_bounds]
 
 create_new_node=Rect2(2598, 282, 900, 700)
-project_settings=Rect2(828, 261, 900, 700)
+project_settings=Rect2(2656, 374, 900, 700)
+export=Rect2(2750, 370, 900, 726)
 
 [color_picker]
 
@@ -55,3 +56,7 @@ recent_presets=PackedColorArray(0.187176, 0.187176, 0.187176, 1, 0, 0, 0, 0.5450
 [scripts_panel]
 
 show_scripts_panel=true
+
+[export_options]
+
+default_filename="MazeProject"
