--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -21,13 +21,13 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://MainScene.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
-dock_3="Scene,Import"
-dock_4="FileSystem"
-dock_5="Inspector,Node,History"
 dock_bottom=[]
 dock_closed=[]
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
+dock_3="Scene,Import"
+dock_4="FileSystem"
+dock_5="Inspector,Node,History"
 
 [EditorNode]
 
@@ -35,13 +35,13 @@ open_scenes=PackedStringArray("res://Maze.tscn", "res://MainScene.tscn", "res://
 current_scene="res://MainScene.tscn"
 center_split_offset=-283
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
 open_scripts=["res://Camera2D.gd", "res://Globals.gd", "res://MainScene.gd", "res://README.md", "res://TileMap.gd"]
-selected_script="res://MainScene.gd"
+selected_script="res://Camera2D.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
