--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -36,12 +36,12 @@ current_scene="res://MainScene.tscn"
 center_split_offset=-283
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Camera2D.gd", "res://Globals.gd", "res://MainScene.gd", "res://README.md", "res://TileMap.gd"]
-selected_script="res://Camera2D.gd"
+selected_script="res://MainScene.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
