--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://MainScene.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_bottom=[]
 dock_closed=[]
@@ -41,7 +41,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Camera2D.gd", "res://Globals.gd", "res://MainScene.gd", "res://README.md", "res://TileMap.gd"]
-selected_script="res://MainScene.gd"
+selected_script="res://Camera2D.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
